...
                <tableViewController id="eRY-Qc-WJa" customClass="ProductsTableViewController" customModule="ProductsList" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CsF-48-9Wj">
                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search" showsScopeBar="YES" id="ok5-0N-u7P">
                            <rect key="frame" x="0.0" y="0.0" width="481" height="56"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                            <scopeButtonTitles>
                                <string>Title</string>
                                <string>Title</string>
...
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="cfY-Rg-ZZL"/>
                                                </constraints>
                                                <attributedString key="attributedText"/>
                                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="EditNote"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <outlet property="delegate" destination="3CJ-26-Ydf" id="geE-xg-pc5"/>
                                                </connections>
                                            </textField>
                                        </subviews>
...
